--- a/pro-style.css
+++ b/pro-style.css
@@ -15,6 +15,10 @@ body{
 
 #nav{
     padding: 25px;
+    position: fixed;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
 }
 
 .home{
@@ -23,17 +27,16 @@ body{
     background-image: url(https://img.freepik.com/free-vector/white-abstract-background_23-2148810113.jpg?w=360);
     border: 5px dotted whitesmoke;
     text-align: center;
+    margin-top: 100px;
 }
 
 .about,
 .contact{
     text-align: left;
-    padding-left: 50px;
 }
 
 .work{
     text-align: right;
-    padding-right: 50px;
 }
 
 #portrait_about{
@@ -61,7 +64,12 @@ body{
 footer{
     text-align: center;
     background-color: aliceblue;
+    border: 1px solid #000;
+    border-radius: 15px;
+    height: 100px;
+    line-height: .2;
 }
+
 
 #linkedin{
     padding-left: 5px;
@@ -77,4 +85,41 @@ footer{
     background-image: url(https://www.freeiconspng.com/uploads/sparkle-png-0.png);
     background-repeat: repeat-x;
     background-position: 5px;
+}
+
+.contact,
+.about,
+.work{
+    padding: 10px 50px 20px;
+    margin: 10px 50px 20px;
+}
+
+p{
+    margin: 20px 20px 15px;
+}
+
+#parainfo{
+    border: 3px solid black;
+    margin-top: 100px;
+    margin-left: 50px;
+    padding: 25px 0px 20px 15px;
+}
+
+
+.workspace{
+    display: inline-block;
+    width: 500px;
+    height: 375px;
+}
+
+#morework{
+    margin-left: 100px;
+}
+
+#contactformandinfo{
+    background-color: hsla(100,100%,50%,0.5);
+}
+
+#contact{
+    margin-top: 100px;
 }
